--- a/assets/cutom.css
+++ b/assets/cutom.css
@@ -1,3 +1,23 @@
+section {
+    margin-top: 60px;
+}
+
+.small-border {
+    width: 50px;
+    height: 3px;
+    display: block;
+    margin: 0 auto;
+    background-color: red;
+    margin-bottom: 30px;
+}
+
+.bg-image {
+    background-image: url('/bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 50vh !important;
+}
 .bg-feature {
     background-color: rgb(253, 237, 240);
     color: black;
