--- a/assets/cutom.css
+++ b/assets/cutom.css
@@ -14,7 +14,7 @@ section {
 .bg-image {
     background-image: url('/bg.jpg');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center;
     background-size: cover;
     height: 50vh !important;
 }
